# Movie-Recommendation-System

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  app.py  config.py  docker-compose.yml  pyproject.toml  render.yaml  requirements-api.txt  requirements.txt
.github/workflows/: ci.yml
api/: main.py
data/processed/: interaction_matrix.npz  item_features.parquet  movie2idx.parquet  user2idx.parquet  user_features.parquet
data/splits/: test.parquet  val.parquet
notebooks/: 01_eda.ipynb  02_feature_engineering.ipynb  03_baseline_cf.ipynb  04_matrix_factorization.ipynb  05_two_tower_model.ipynb  06_evaluation.ipynb  06_evaluation_fixed.ipynb
src/: __init__.py
src/data/: __init__.py  load_data.py  preprocess.py
src/evaluation/: __init__.py  metrics.py
src/features/: __init__.py  build_features.py
src/models/: __init__.py  collaborative_filtering.py  matrix_factorization.py  two_tower.py
src/serving/: __init__.py  recommender.py
tests/: __init__.py  conftest.py  test_api.py  test_collaborative_filtering.py  test_features.py  test_metrics.py  test_preprocessing.py
