[project]
name = "movie-recommendation-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.5",
    "faiss-cpu>=1.14.2",
    "fastapi>=0.136.3",
    "huggingface-hub>=1.17.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "mlflow>=3.13.0",
    "numpy>=2.4.6",
    "pandas>=2.3.3",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.9.0",
    "scikit-surprise>=1.1.5",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "streamlit>=1.58.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "anyio>=4.0.0",
]

[tool.pytest.ini_options]
testpaths    = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--tb=short",
    "-q",
]
markers = [
    "slow: mark test as slow (deselect with -m 'not slow')",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.coverage.run]
source = ["src", "api"]
omit   = ["tests/*", "notebooks/*"]

[tool.coverage.report]
show_missing = true
fail_under   = 60
